--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@fullcalendar/timegrid": "^6.1.17",
     "@headlessui/react": "^2.2.2",
     "@hookform/resolvers": "^4.1.3",
+    "@types/cookie": "^0.6.0",
     "@types/js-cookie": "^3.0.6",
     "@types/react-big-calendar": "^1.16.1",
     "antd": "^5.26.7",
     "axios": "^1.8.4",
+    "cookie": "^1.0.2",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "geolib": "^3.3.4",
