--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 EMPLOYEE_API_TOKEN=
 # NEXT_PUBLIC_API_BASE_URL=http://localhost:8000/api
-NEXT_PUBLIC_API_BASE_URL=http://172.16.204.9:8080/api
+NEXT_PUBLIC_API_BASE_URL=http://172.16.204.9:8080
