--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dayjs": "^1.11.13",
     "geolib": "^3.3.4",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "next": "14.2.5",
     "qr-scanner": "^1.4.2",
@@ -44,6 +45,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
