--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "geolib": "^3.3.4",
+    "jose": "^6.0.13",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "next": "14.2.5",
     "qr-scanner": "^1.4.2",
