--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "jose": "^6.0.13",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "next": "14.2.5",
@@ -44,6 +46,7 @@
     "recharts": "^2.15.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.1",
+    "xlsx": "^0.18.5",
     "zod": "^3.24.2"
   },
   "devDependencies": {
