--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "moment": "^2.30.1",
     "next": "14.2.5",
     "qr-scanner": "^1.4.2",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-big-calendar": "^1.18.0",
     "react-calendar": "^5.1.0",
@@ -43,6 +44,7 @@
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^4.2.1",
+    "react-to-print": "^3.1.1",
     "recharts": "^2.15.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.1",
