--- a/package.json
+++ b/package.json
@@ -27,15 +27,17 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "geolib": "^3.3.4",
+    "html2canvas": "^1.4.1",
     "jose": "^6.0.13",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
-    "jspdf": "^3.0.1",
+    "jspdf": "^3.0.2",
     "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "next": "14.2.5",
     "qr-scanner": "^1.4.2",
+    "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-big-calendar": "^1.18.0",
@@ -54,6 +56,7 @@
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
