--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+NEXT_PUBLIC_PAYLOAD_ENCRYPTION_KEY="C2ZALTOjdDTiJwOxVa4Ks02P/RYFy+79LQ7K92p/2gA="
 EMPLOYEE_API_TOKEN=
 NEXT_PUBLIC_API_BASE_URL=http://172.16.204.9:8080
 ; NEXT_PUBLIC_API_BASE_URL=https://hrmsprodapi.dpdatacenter.com
