--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "antd": "^5.26.7",
     "axios": "^1.8.4",
     "cookie": "^1.0.2",
+    "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "geolib": "^3.3.4",
@@ -35,7 +36,7 @@
     "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
-    "next": "14.2.5",
+    "next": "^14.2.32",
     "qr-scanner": "^1.4.2",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
@@ -54,6 +55,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/qrcode": "^1.5.5",
