--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "next": "^14.2.32",
+    "next-pwa": "^5.6.0",
     "qr-scanner": "^1.4.2",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
