--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.1",
     "xlsx": "^0.18.5",
+    "xlsx-js-style": "^1.2.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
